Fixed layout bug for share bar, fixed reddit output issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -279,7 +279,7 @@ h1, h2, h3 {
 #shareBar {
     margin-left: -220px;
     margin-top: 0px;
-    width: 220px;
+    width: 240px;
     overflow: hidden;
     box-shadow: 0px 0px 20px -5px rgba(0, 0, 0, 0.5);
     margin-top: 20px;
@@ -304,7 +304,7 @@ h1, h2, h3 {
 }
 #shareReturn {
     float:right;
-    right: 240px;
+    margin-left: -385px;
     top:246px;
     position:absolute;
     z-index:10;
